crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__docs_web_page_h1.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<h1>{props.data.user.name}</h1>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 32,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Tag(
                        "h1",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 27,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 26,
                                    },
                                },
                                value: Access {
                                    record: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 6,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 21,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 16,
                                                    },
                                                },
                                                value: Access {
                                                    record: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 6,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 11,
                                                            },
                                                        },
                                                        value: Var(
                                                            "props",
                                                        ),
                                                    },
                                                    field: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 12,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 16,
                                                            },
                                                        },
                                                        value: "data",
                                                    },
                                                },
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 21,
                                                    },
                                                },
                                                value: "user",
                                            },
                                        },
                                    },
                                    field: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 26,
                                            },
                                        },
                                        value: "name",
                                    },
                                },
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
