crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__docs_web_style_class.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div class={card}>...</div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 28,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: "class",
                        },
                        value: Some(
                            Expr(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                    },
                                    value: Var(
                                        "card",
                                    ),
                                },
                            ),
                        ),
                    },
                ],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: Text(
                            "...",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
