crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_attr_boolean.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<text bold>Tasks</text>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 24,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Tag(
                        "text",
                    ),
                },
                attrs: [
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: "bold",
                        },
                        value: None,
                    },
                ],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: Text(
                            "Tasks",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
